# Viturka

./: .gitignore  Cargo.toml  README.md
benchmarks/: verified_cpu_run.md  vot_sgdstep_run.md
chain/: Cargo.toml
chain/src/: block.rs  consensus.rs  error.rs  lib.rs  proof.rs  state.rs  transaction.rs  types.rs
chain/tests/: integration.rs
cli/: Cargo.toml
cli/src/: main.rs
poc/: verifiable_training_demo.py  vot_sgdstep_demo.py
poc/artifacts/: calibration.json  input.json  model.compiled  model.onnx  proof.json  settings.json  witness.json
poc/vot_artifacts/: calibration.json  input.json  model.compiled  proof.json  settings.json  sgd_step.onnx  witness.json
