[package]
name = "viturka-chain"
version = "0.1.0"
edition = "2021"
description = "Core blockchain library for the Viturka ZKML-native protocol"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
thiserror = "2"
tracing = "0.1"
rand = "0.8"
hex = { version = "0.4", features = ["serde"] }

[dev-dependencies]
rand = "0.8"
